# tizoo

./: .gitignore  README.md  dune-project  flake.nix  mlsus.opam  test.mlsus
examples/: test.ml
lib/: dune
lib/ast/: ast.ml  ast_builder.ml  ast_types.ml  dune  mlsus_ast.ml
lib/constraint/: constraint.ml  constraint.mli  dune  mlsus_constraint.ml
lib/constraint_solver/: decoded_type.ml  decoded_type.mli  dune  generalization.ml  import.ml  mlsus_constraint_solver.ml  solver.ml  structure.ml  tree.ml  tree.mli
lib/constraint_solver/test/: dune  test_constraint_solver.ml  test_constraint_solver.mli
lib/constraints/: README.md  constraint.ml  dune  generalization.ml  import.ml  mlsus_constraints.ml  region_tree.ml  region_tree.mli  region_tree_intf.ml  solver.ml  structure.ml  tree.ml  tree.mli  types.ml
lib/main/: dune  mlsus_main.ml  mlsus_main.mli
lib/main/test/: dune  test_main.ml
lib/parser/: dune  lexer.mll  mlsus_parser.ml  mlsus_parser.mli  parser.mly  token.mly
lib/parser/test/: dune  import.ml  test_lexer.ml  test_parser.ml
lib/std/: dune  identifier.ml  identifier.mli  incr.ml  mlsus_std.ml  tizoo_std.ml  union_find.ml  union_find.mli  var.ml
lib/type_checker/: adt.ml  dune  env.ml  env.mli  import.ml  infer.ml  mlsus_type_checker.ml  mlsus_type_checker.mli  predef.ml
lib/unifier/: dune  mlsus_unifier.ml  structure.ml  unifier.ml  unifier.mli
nix/: overlay.nix
test/constraint/: dune  test_constraint.ml
